--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div id="root"></div>
-        <script src="../build/web/bundle.js" type="text/javascript"></script>
+        <script src="/bundle.js" type="text/javascript"></script>
     </body>
 </html>
 
