--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Small Retail</title>
+        <title>Counter</title>
     </head>
     <body>
         <div id="root"></div>
