--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="/bundle.js" type="text/javascript"></script>
+    <script src="/vendor.bundle.js" type="text/javascript"></script>
+    <script src="/app.bundle.js" type="text/javascript"></script>
   </body>
 </html>
 
